--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,9 +132,11 @@ p {
 
 /* main */
 
-/* section- */ 
+/* section 1 */ 
 
 .container-section-1{
     margin: 120px 320px;
     justify-content: space-between;
 }
+
+/* section  2 */
