--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,15 +35,17 @@ img {
 
 
 .relative{
-    postion: relative;
+    position: relative;
 }
 
-
+/* header */
 
 header {
     background-color: #b4d0e7;
     font-size: 14px;
 }
+
+/* header-top */
 
 .header-top {
     height: 10vh;
@@ -103,6 +105,7 @@ header {
     margin: 60px 270px;
     height: 85vh;
     padding-top: 70px;
+    background-color: #b4d0e7;
 }
 
 h1 {
@@ -129,7 +132,6 @@ p {
 .header-image {
     width: 500px;
 }
-
 
 /* main */
 
@@ -595,4 +597,47 @@ h2 {
     display: block;
 }
 
+/* footer */
+footer {
+    background-color: black;
+}
 
+.container-footer {
+    height: 400px;
+    padding: 80px 0px;
+    justify-content: space-between;
+    margin: 0px 270px;
+    
+    
+}
+
+.container-footer > div {
+   color: white;
+}
+
+.container-bottom > a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 0px;
+    font-size: 12px;
+}
+
+.container-bottom > h3 {
+    padding-bottom: 20px;
+}
+
+.foot-bottom {
+    color: white;
+    position: relative;
+    bottom: 30px;
+    font-size: 12px;
+    padding-left: 264px;
+}
+
+.foot-line-small {
+    width: 80px;
+    position: relative;
+    position: relative;
+    bottom: 60px;
+    margin-left: 265px;
+}
